# tensorrtllm_backend

./: .gitignore  .gitlab-ci.yml  .gitmodules  .pre-commit-config.yaml  CMakeLists.txt  Dockerfile.triton  Dockerfile.triton-h100  README.md  build.sh  pyproject.toml  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml
.github/workflows/: pre-commit.yml
all_models/bert/ensemble/: config.pbtxt
all_models/bert/preprocessing/: config.pbtxt
all_models/bert/preprocessing/1/: model.py
all_models/bert/tensorrt_llm/: config.pbtxt
all_models/bert/tensorrt_llm/1/: model.py
all_models/disaggregated_serving/disaggregated_serving_bls/: config.pbtxt
all_models/gpt/: config.pbtxt
all_models/gpt/1/: model.py
all_models/gpt/ensemble/: config.pbtxt
all_models/gpt/postprocessing/: config.pbtxt
all_models/gpt/postprocessing/1/: model.py
all_models/gpt/postprocessing/1/utils/: gpt_token_encoder.py
all_models/gpt/preprocessing/: config.pbtxt
all_models/gpt/preprocessing/1/: model.py  word_list.py
all_models/gpt/tekit/: config.pbtxt
all_models/gpt/tekit/1/: model.py
all_models/gpt/tensorrt_llm/: config.pbtxt
all_models/gpt/tensorrt_llm/1/: model.py
all_models/inflight_batcher_llm/ensemble/: config.pbtxt
all_models/inflight_batcher_llm/postprocessing/: config.pbtxt
all_models/inflight_batcher_llm/postprocessing/1/: model.py
all_models/inflight_batcher_llm/preprocessing/: config.pbtxt
all_models/inflight_batcher_llm/preprocessing/1/: model.py
all_models/inflight_batcher_llm/tensorrt_llm/: config.pbtxt
all_models/inflight_batcher_llm/tensorrt_llm/1/: model.py
all_models/inflight_batcher_llm/tensorrt_llm_bls/: config.pbtxt
all_models/inflight_batcher_llm/tensorrt_llm_bls/1/: model.py
all_models/inflight_batcher_llm/tensorrt_llm_bls/1/lib/: decode.py  triton_decoder.py
all_models/inflight_batcher_llm/tensorrt_llm_streaming/: config.pbtxt
all_models/llmapi/tensorrt_llm/1/: model.py
all_models/multimodal/ensemble/: config.pbtxt
all_models/multimodal/multimodal_encoders/: config.pbtxt
all_models/multimodal/multimodal_encoders/1/: model.py  multimodal_utils.py
all_models/spec_decode/ensemble/: config.pbtxt
all_models/spec_decode/postprocessing/1/: model.py
all_models/spec_decode/preprocessing/1/: model.py
all_models/spec_decode/tensorrt_llm_bls/: config.pbtxt
all_models/spec_decode/tensorrt_llm_bls/1/: model.py
all_models/spec_decode/tensorrt_llm_draft/: config.pbtxt
all_models/spec_decode/tensorrt_llm_target/: config.pbtxt
all_models/tests/: test_decode.py  test_multi_image_preprocess.py  test_multimodal_encoders.py  test_python_backend.py  test_triton_decoder.py
all_models/whisper/whisper_bls/1/: model.py
ci/: README.md  simple_data.json
ci/L0_backend_trtllm/: base_metrics_verification_tests.py  custom_metrics_verification_tests.py  generate_engines.sh  generate_engines.sh.patch  metric_verification_tests.py  model.py  test.sh
docker/: Dockerfile  requirements.txt
dockerfile/: Dockerfile.dev  Dockerfile.triton  Dockerfile.triton-h100  Dockerfile.triton.trt_llm_backend  Dockerfile.trt_llm_backend  README.md  hub.py
docs/: README-engine-backend-archive.md  baichuan.md  build.md  custom.md  encoder_decoder.md  gemma.md  guided_decoding.md  llama.md  llama_multi_instance.md  llmapi.md  lora.md  lora_warmup.md  model_config.md  multimodal.md  spec_decode.md  whisper.md
example/: Dockerfile  launch_triton_server.py
examples/gpt/: client.py  client_async.py
inflight_batcher_llm/: CMakeLists.txt  CMakeLists.txt.patch  README.md
inflight_batcher_llm/client/: README.md  e2e_grpc_speculative_decoding_client.py  end_to_end_grpc_client.py  inflight_batcher_llm_client.py  streaming_client.py
inflight_batcher_llm/cmake/: InflightBatcherLLMBackendConfig.cmake.in  TritonTensorRTLLMBackendConfig.cmake.in
inflight_batcher_llm/scripts/: build.sh
inflight_batcher_llm/src/: inference_answer.cc  inference_answer.h  inflight_batcher_llm.cc  libtensorrtllm.cc  libtriton_tensorrtllm.ldscript  model_instance_state.cc  model_instance_state.h  model_state.cc  model_state.h  mpiUtils.h  mpi_utils.h  orchestrator.cc  orchestrator.h  utils.cc  utils.h  work_item.cc  work_item.h  work_items_queue.cc  work_items_queue.h  worker.cc
inflight_batcher_llm/src/custom_metrics_reporter/: custom_metrics_reporter.cc  custom_metrics_reporter.h
inflight_batcher_llm/src/metrics/: triton_metrics.cc  triton_metrics.h
inflight_batcher_llm/tests/: CMakeLists.txt  first.json  inferenceAnswer.cpp  modelInstanceStateTest.cpp  modelState.cpp  second.json  third.json  utilsTest.cpp
jenkins/: GH200Builder.groovy  L0_MergeRequest.groovy
scripts/: kill_triton_server.sh  launch_triton_server.py  launch_triton_server.sh  package_trt_llm_backend.sh
scripts/benchmarking/: build_model.sh  collate_reports.py  test.sh  trtllm_perf.sh
scripts/tests/: build_model.sh  test.sh
src/: libtensorrtllm.cc  libtriton_tensorrtllm.ldscript
tests/: build_model.sh  pytest.ini  ref_results.json  test.sh
tests/llm-backend-test-defs/: README.md
tests/llm-backend-test-defs/turtle/defs/: build_engines.py  common.py  common_functions.py  conftest.py  test_dummy.py  test_llm_backend.py  test_triton_llm.py  test_triton_memleak.py  test_triton_multi_node.py  test_triton_rcca.py  turtle_defs.json
tests/llm-backend-test-defs/turtle/perf_configs/: gpu_configs.yml
tests/llm-backend-test-defs/turtle/test_lists/: waives.txt
tools/: environment_setup.sh  fill_template.py  gen_trtllm_dockerfile.py  gen_trtllm_dockerfile.py.patch  utils.sh  version.txt
tools/dataset/: 125_data.json  mini_cnn_eval_spec_decoding.json
tools/gpt/: client.py  client_async.py  create_gpt_config.sh  end_to_end_test.py  gen_input_data.py  identity_test.py
tools/gpt/utils/: utils.py
tools/inflight_batcher_llm/: benchmark_core_model.py  end_to_end_streaming_client.py  end_to_end_test.py  identity_test.py  speculative_decoding_test.py  test_max_queue_size.py
tools/multimodal/: blip2_opt2.7b_client.py  client.py
tools/utils/: utils.py
(+10 files in other folders)
